nginx-multitool/deploy.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool
spec:
  selector:
    app: nginx-multitool
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - image: praqma/network-multitool:alpine
        imagePullPolicy: IfNotPresent
        name: nginx-multitool
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          name: nginx-multitool-index-html
          subPath: index.html
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-multitool-conf-d
          subPath: default.conf
      volumes:
      - configMap:
          defaultMode: 0666
          name: nginx-multitool-conf
        name: nginx-multitool-conf-d
      - configMap:
          defaultMode: 0666
          name: nginx-multitool-index-html
        name: nginx-multitool-index-html
